# enamel

./: .gitignore  .testr.conf  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.rst  example.conf  requirements.txt  setup.cfg  test-requirements.txt  tmp.py  tox.ini
devstack/: apache-enamel.template  plugin.sh  settings
docs/source/: conf.py  database_migrations.rst  index.rst
enamel/: exception.py  main.py  opts.py  task_processor.py
enamel/api/: app.wsgi  decorators.py  errors.py  handlers.py  request_funcs.py  version.py
enamel/cmd/: api.py  task_processor.py
enamel/db/: alembic.ini  models.py  sync.py  utils.py
enamel/db/migrations/: env.py  script.py.mako
enamel/db/migrations/versions/: ee6d6ae007c1_add_tasks_and_task_items.py
enamel/objects/: __init__.py  base.py  exception.py  task.py  task_item.py
enamel/tests/: fixtures.py
enamel/tests/functional/: fixtures.py
enamel/tests/functional/db/: test_migrations.py  test_task.py  test_task_item.py
enamel/tests/functional/gabbi/: fixtures.py  helpers.py  test_gabbi.py
enamel/tests/functional/gabbi/gabbits/: accept.yaml  basic.yaml  keystone.yaml  requestid.yaml  servers.yaml  versions.yaml
enamel/tests/functional/task_processor/: test_service.py
enamel/tests/integration/gabbi/gabbits/: integration.yaml
enamel/tests/integration/hooks/: post_test_hook.sh
enamel/tests/unit/: base.py  test_null.py  test_task_processor.py
enamel/tests/unit/api/: test_version.py
