[metadata]
name = enamel
summary = OpenStack Porcelain API
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    enamel

[entry_points]
console_scripts =
    enamel = enamel.main:main
    enamel-dbsync = enamel.db.sync:main
oslo.config.opts =
    enamel = enamel.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
